Gimp 2.99 crash when reordering layer stack
Environment/Versions
- GIMP version:
- Package:
- Operating System:
Description of the bug
Reproduction
Is the bug reproducible? Always
Reproduction steps:
- Open any image
- Add a layer above the original image layer
- Try to position the new layer to below the original by dragging in the layer dialog
…
Expected result:layers should reorder with new layer at the bottom
Actual result: Gimp crashes
Additional information
If you have a backtrace for a crash or a warning, paste it here.
GNU Image Manipulation Program version 2.99.16
git-describe: GIMP_2_99_16
Build: org.gimp.GIMP.flatpak.dev rev 0 for linux
# C compiler #
Using built-in specs.
COLLECT_GCC=/usr/bin/cc
COLLECT_LTO_WRAPPER=/usr/libexec/gcc/x86_64-unknown-linux-gnu/13.2.0/lto-wrapper
Target: x86_64-unknown-linux-gnu
Configured with: ../configure --prefix=/usr --exec-prefix=/usr --bindir=/usr/bin --sbindir=/usr/bin --sysconfdir=/etc --datadir=/usr/share --includedir=/usr/include --libdir=/usr/lib --libexecdir=/usr/libexec --localstatedir=/var --sharedstatedir=/usr/com --mandir=/usr/share/man --infodir=/usr/share/info --enable-deterministic-archives --enable-shared --build=x86_64-bootstrapper-linux-gnu --host=x86_64-unknown-linux-gnu lt_cv_sys_lib_dlsearch_path_spec=/usr/lib/x86_64-linux-gnu --target=x86_64-unknown-linux-gnu --disable-multilib --enable-multiarch --disable-bootstrap --with-build-sysroot=/cross-installation --enable-languages=c,c++,fortran,objc,obj-c++ --enable-default-pie --enable-default-ssp --with-isl --disable-libssp --enable-linker-build-id --disable-libstdcxx-filesystem-ts --enable-cet host_configargs=lt_cv_sys_lib_dlsearch_path_spec=/usr/lib/x86_64-linux-gnu target_configargs=lt_cv_sys_lib_dlsearch_path_spec=/usr/lib/x86_64-linux-gnu --with-tune=generic
Thread model: posix
Supported LTO compression algorithms: zlib
gcc version 13.2.0 (GCC)
# Libraries #
using babl version 0.1.106 (compiled against version 0.1.106)
using GEGL version 0.4.46 (compiled against version 0.4.46)
using GLib version 2.78.1 (compiled against version 2.78.0)
using GdkPixbuf version 2.42.10 (compiled against version 2.42.10)
using GTK+ version 3.24.38 (compiled against version 3.24.38)
using Pango version 1.51.0 (compiled against version 1.51.0)
using Fontconfig version 2.14.2 (compiled against version 2.14.2)
using Cairo version 1.17.8 (compiled against version 1.17.8)
# Flatpak info #
[Application]
name=org.gimp.GIMP
runtime=runtime/org.gnome.Sdk/x86_64/45
[Instance]
instance-id=415216845
instance-path=/home/jim/.var/app/org.gimp.GIMP
app-path=/home/jim/.local/share/flatpak/app/org.gimp.GIMP/x86_64/beta/e46014ba5af77840326ca82553a8118c95e2edcb45adb11c8c6ad1602a3a6e01/files
app-commit=e46014ba5af77840326ca82553a8118c95e2edcb45adb11c8c6ad1602a3a6e01
app-extensions=org.gimp.GIMP.Debug=f4027e219e6181b748b362ee16613af32a0e1cfc667bafb3554012d1e969a6eb
runtime-path=/home/jim/.local/share/flatpak/runtime/org.gnome.Sdk/x86_64/45/722ccb33d439cc893fa15df7b971a9b012494ea051b9a6163ac9a58c59cce115/files
runtime-commit=722ccb33d439cc893fa15df7b971a9b012494ea051b9a6163ac9a58c59cce115
runtime-extensions=org.gnome.Sdk.Debug=610da40939ca759f47f66b2d8a4740297ef2c6073e2d05b2bb93a142cc526c88;org.gnome.Sdk.Locale=0f56f5d0d67564334a7c71c4e0fe546849e2fa8de2f971697f097f2c866c8538;org.freedesktop.Platform.GL.default=f306d0b0fb572935f2813c1841243bbce7212059095243c6bc6c49bff48fe71b;org.gtk.Gtk3theme.Yaru=4b1e043544efb4a6d0278a3a2deaede9f6ff61034589bdb380054121aa098952;org.freedesktop.Platform.openh264=bf24f23f3ba385f6e8c9215ed94d979db99814b0b614504a23a6d0751dc5f063;org.freedesktop.Platform.VAAPI.Intel=a8ea69445ee7edcfffd32c16bfa0180af280e263a4bb9dd6c2771185a6749535;org.freedesktop.Platform.GL.default=a4d8251ee714a4ee46ceea0a11a9ac58d41fac355103675d824d9bb145a58215
branch=beta
arch=x86_64
flatpak-version=1.14.4
session-bus-proxy=true
system-bus-proxy=true
devel=true
[Context]
shared=network;ipc;
sockets=x11;wayland;fallback-x11;
devices=dri;
filesystems=xdg-config/GIMP;xdg-config/gtk-3.0;/tmp;xdg-run/gvfsd;host;xdg-run/gvfs;
[Session Bus Policy]
org.kde.kwin.Screenshot=talk
org.gtk.vfs.*=talk
org.gnome.Shell.Screenshot=talk
org.freedesktop.FileManager1=talk
[Environment]
ALSA_CONFIG_PATH=/usr/share/alsa/alsa-flatpak.conf
GI_TYPELIB_PATH=/app/lib/girepository-1.0
GST_PLUGIN_SYSTEM_PATH=/app/lib/gstreamer-1.0:/usr/lib/extensions/gstreamer-1.0:/usr/lib/x86_64-linux-gnu/gstreamer-1.0
XDG_DATA_DIRS=/app/share:/usr/share:/usr/share/runtime/share:/run/host/user-share:/run/host/share
ALSA_CONFIG_DIR=/usr/share/alsa
__EGL_EXTERNAL_PLATFORM_CONFIG_DIRS=/etc/egl/egl_external_platform.d:/usr/lib/x86_64-linux-gnu/GL/egl/egl_external_platform.d:/usr/share/egl/egl_external_platform.d
fatal error: Segmentation fault
Stack trace:
# Stack traces obtained from PID 2 - Thread 2 #
[New LWP 3]
[New LWP 4]
[New LWP 5]
[New LWP 6]
[New LWP 7]
[New LWP 8]
[New LWP 9]
[New LWP 10]
[New LWP 21]
[New LWP 23]
[New LWP 24]
[New LWP 25]
[New LWP 26]
[New LWP 27]
[New LWP 28]
[New LWP 125]
This GDB supports auto-downloading debuginfo from the following URLs:
<https://debuginfod.ubuntu.com>
Enable debuginfod for this session? (y or [n]) [answered N; input not from terminal]
Debuginfod has been disabled.
To make this setting permanent, add 'set debuginfod enabled off' to .gdbinit.
[Thread debugging using libthread_db enabled]
Using host libthread_db library "/usr/lib/x86_64-linux-gnu/libthread_db.so.1".
0x00007f58d87eb5ea in __GI___libc_read (nbytes=255, buf=0x7fffd0c2c770, fd=21) at ../sysdeps/unix/sysv/linux/read.c:26
26 return SYSCALL_CANCEL (read, fd, buf, nbytes);
Id Target Id Frame
* 1 Thread 0x7f58d711ae00 (LWP 2) "gimp-2.99" 0x00007f58d87eb5ea in __GI___libc_read (nbytes=255, buf=0x7fffd0c2c770, fd=21) at ../sysdeps/unix/sysv/linux/read.c:26
2 Thread 0x7f58d3fff6c0 (LWP 3) "pool-spawner" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
3 Thread 0x7f58d37fe6c0 (LWP 4) "gmain" 0x00007f58d87eb01d in __GI___poll (fds=0x5646a93a00a0, nfds=2, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
4 Thread 0x7f58d2ffd6c0 (LWP 5) "gdbus" 0x00007f58d87eb01d in __GI___poll (fds=0x7f584c0bfea0, nfds=6, timeout=-1) at ../sysdeps/unix/sysv/linux/poll.c:29
5 Thread 0x7f58d26136c0 (LWP 6) "worker" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
6 Thread 0x7f58d1e126c0 (LWP 7) "worker" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
7 Thread 0x7f58d16116c0 (LWP 8) "worker" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
8 Thread 0x7f58d0e106c0 (LWP 9) "worker" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
9 Thread 0x7f58b7fff6c0 (LWP 10) "worker" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
10 Thread 0x7f587e7ff6c0 (LWP 21) "async" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
11 Thread 0x7f587d7fd6c0 (LWP 23) "gimp-2.99" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
12 Thread 0x7f587d5fc6c0 (LWP 24) "gimp-2.99" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
13 Thread 0x7f587d3fb6c0 (LWP 25) "gimp-2.99" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
14 Thread 0x7f587d1fa6c0 (LWP 26) "gimp-2.99" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
15 Thread 0x7f587cff96c0 (LWP 27) "gimp-2.99" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
16 Thread 0x7f587cdf86c0 (LWP 28) "gimp-2.99" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
17 Thread 0x7f585faf66c0 (LWP 125) "swap writer" syscall () at ../sysdeps/unix/sysv/linux/x86_64/syscall.S:38
#0 0x00007f58d87eb5ea in __GI___libc_read (nbytes=255, buf=0x7fffd0c2c770, fd=21) at ../sysdeps/unix/sysv/linux/read.c:26
sc_ret = -512
sc_cancel_oldtype = 0
sc_ret = <optimized out>
#1 __GI___libc_read (fd=21, buf=buf@entry=0x7fffd0c2c770, nbytes=nbytes@entry=255) at ../sysdeps/unix/sysv/linux/read.c:24
#2 0x00007f58da2f02f4 in read (__nbytes=255, __buf=0x7fffd0c2c770, __fd=<optimized out>) at /usr/include/x86_64-linux-gnu/bits/unistd.h:28
status = 32600
stack_printed = 0
gtrace = 0x0
gimp_pid = "2\000\000\000\000\000\000\000\320\307\302\320\377\177\000"
buffer = "\200\307\302\320\377\177\000\000\000j\002e\372C\021\342\300\307\302\320\377\177\000\000\276\033x\330X\177\000\000\266\001\000\000\000\000\000\000\000j\002e\372C\021\342\300\307\302\320\377\177\000\000Ѝ\001\256FV\000\000\000\020\000\000\000\000\000\000\000j\002e\372C\021\342\360\307\302\320\377\177\000\000Ѝ\001\256FV\000\000Ѝ\001\256FV\000\000\0316q\250FV\000\000\0316q\250FV\000\000\001\000\000\000\000\000\000\000p\310\302\320\377\177\000\000\261yv\330X\177\000\000\360\224v\330X\177", '\000' <repeats 26 times>, "u\000\000\000\000\000\000\000\000j\002e\372C\021\342\200\310\302\320\377\177\000\000\000j\002"...
read_n = <optimized out>
sync_fd = {19, 20}
out_fd = {21, 22}
fork_pid = <optimized out>
pid = 2
eintr_count = 0
tid = <optimized out>
#3 gimp_stack_trace_print (prog_name=<optimized out>, stream=stream@entry=0x5646ae018dd0, trace=trace@entry=0x0) at ../libgimpbase/gimputils.c:1344
status = 32600
stack_printed = 0
gtrace = 0x0
gimp_pid = "2\000\000\000\000\000\000\000\320\307\302\320\377\177\000"
buffer = "\200\307\302\320\377\177\000\000\000j\002e\372C\021\342\300\307\302\320\377\177\000\000\276\033x\330X\177\000\000\266\001\000\000\000\000\000\000\000j\002e\372C\021\342\300\307\302\320\377\177\000\000Ѝ\001\256FV\000\000\000\020\000\000\000\000\000\000\000j\002e\372C\021\342\360\307\302\320\377\177\000\000Ѝ\001\256FV\000\000Ѝ\001\256FV\000\000\0316q\250FV\000\000\0316q\250FV\000\000\001\000\000\000\000\000\000\000p\310\302\320\377\177\000\000\261yv\330X\177\000\000\360\224v\330X\177", '\000' <repeats 26 times>, "u\000\000\000\000\000\000\000\000j\002e\372C\021\342\200\310\302\320\377\177\000\000\000j\002"...
read_n = <optimized out>
sync_fd = {19, 20}
out_fd = {21, 22}
fork_pid = <optimized out>
pid = 2
eintr_count = 0
tid = <optimized out>
#4 0x00005646a848ec9e in gimp_eek (reason=reason@entry=0x5646a871a224 "fatal error", message=<optimized out>, use_handler=use_handler@entry=1) at ../app/errors.c:355
fd = 0x5646ae018dd0
has_backtrace = 1
pid = "2\000\000\000\000\000\000\000\020\3051\256FV\000"
gimpdebug = 0x5646a87935b8 "/app/libexec/gimp-debug-tool-2.99"
args = {0x5646a87935b8 "/app/libexec/gimp-debug-tool-2.99", 0x5646a9628020 "gimp-2.99", 0x7fffd0c2c970 "2", 0x5646a871a224 "fatal error", 0x5646adf1137c "Segmentation fault", 0x5646a9625ea0 "/home/jim/.var/app/org.gimp.GIMP/config/GIMP/2.99/CrashLog/gimp-crash-1703174784.txt", 0x0, 0x7fffd0c2c980 "0", 0x0}
timestamp = "0\000\302\320\377\177\000\000Z;\314\331X\177\000"
config = <optimized out>
eek_handled = 0
debug_policy = GIMP_DEBUG_POLICY_WARNING
iter = <optimized out>
num_idx = <optimized out>
i = 0
#5 0x00005646a848f2cc in gimp_fatal_error (message=<optimized out>) at ../app/errors.c:206
#6 0x00005646a8491f2e in gimp_sigfatal_handler (sig_num=<optimized out>) at ../app/signals.c:196
#7 0x00007f58d8720e80 in <signal handler called> () at /usr/lib/x86_64-linux-gnu/libc.so.6
#8 0x00007f58d7cd13b9 in wl_proxy_get_user_data () at /usr/lib/x86_64-linux-gnu/libwayland-client.so.0
#9 0x00007f58d8b64966 in wl_surface_get_user_data (wl_surface=0x0) at /usr/include/wayland-client-protocol.h:3716
seat = 0x5646a94a64d0 [GdkWaylandSeat]
dest_window = <optimized out>
dnd_owner = <optimized out>
selection = <optimized out>
__func__ = "data_device_enter"
#10 data_device_enter (data=0x5646a94a64d0, data_device=0x5646a93ef250, serial=41831, surface=0x0, x=10348, y=8482, offer=0x5646ae31c510) at ../gdk/wayland/gdkdevice-wayland.c:1177
seat = 0x5646a94a64d0 [GdkWaylandSeat]
dest_window = <optimized out>
dnd_owner = <optimized out>
selection = <optimized out>
__func__ = "data_device_enter"
#11 0x00007f58d8384056 in ffi_call_unix64 () at ../src/x86/unix64.S:104
#12 0x00007f58d8382b5d in ffi_call_int (cif=cif@entry=0x7fffd0c2d2c0, fn=<optimized out>, rvalue=<optimized out>, avalue=<optimized out>, closure=closure@entry=0x0) at ../src/x86/ffi64.c:673
classes = {X86_64_INTEGER_CLASS, 32767, 3627561000, 32600}
stack = <optimized out>
argp = 0x7fffd0c2d118 ""
arg_types = <optimized out>
gprcount = 6
ssecount = <optimized out>
ngpr = 1
nsse = 0
i = <optimized out>
avn = <optimized out>
flags = <optimized out>
reg_args = <optimized out>
#13 0x00007f58d8383313 in ffi_call (cif=0x7fffd0c2d2c0, fn=<optimized out>, rvalue=<optimized out>, avalue=<optimized out>) at ../src/x86/ffi64.c:710
arg_types = 0x7fffd0c2d390
i = <optimized out>
nargs = 7
max_reg_struct_size = <optimized out>
#14 0x00007f58d7cd3d5b in wl_closure_invoke () at /usr/lib/x86_64-linux-gnu/libwayland-client.so.0
#15 0x00007f58d7cd0c1c in dispatch_event () at /usr/lib/x86_64-linux-gnu/libwayland-client.so.0
#16 0x00007f58d7cd0f02 in dispatch_queue () at /usr/lib/x86_64-linux-gnu/libwayland-client.so.0
#17 0x00007f58d7cd11d8 in wl_display_dispatch_queue_pending () at /usr/lib/x86_64-linux-gnu/libwayland-client.so.0
#18 0x00007f58d7cd1240 in wl_display_dispatch_pending () at /usr/lib/x86_64-linux-gnu/libwayland-client.so.0
#19 0x00007f58d8b6b730 in _gdk_wayland_display_queue_events (display=<optimized out>) at ../gdk/wayland/gdkeventsource.c:201
display_wayland = <optimized out>
source = 0x5646a949db80
__func__ = "_gdk_wayland_display_queue_events"
#20 0x00007f58d8b2f1a7 in gdk_display_get_event (display=display@entry=0x5646a949c670 [GdkWaylandDisplay]) at ../gdk/gdkdisplay.c:442
__func__ = "gdk_display_get_event"
#21 0x00007f58d8b6b3fe in gdk_event_source_dispatch (base=<optimized out>, callback=<optimized out>, data=<optimized out>) at ../gdk/wayland/gdkeventsource.c:120
source = <optimized out>
display = 0x5646a949c670 [GdkWaylandDisplay]
event = <optimized out>
#22 0x00007f58d9cadd47 in g_main_dispatch (context=context@entry=0x5646a93a7250) at ../glib/gmain.c:3476
dispatch = 0x7f58d8b6b3e0 <gdk_event_source_dispatch>
prev_source = 0x0
begin_time_nsec = 70582392760983
was_in_call = 0
user_data = 0x0
callback = 0x0
cb_funcs = 0x0
cb_data = 0x0
need_destroy = <optimized out>
source = 0x5646a949db80
current = 0x5646a93b0550
i = 0
__func__ = "g_main_dispatch"
#23 0x00007f58d9cafe57 in g_main_context_dispatch_unlocked (context=0x5646a93a7250) at ../glib/gmain.c:4284
max_priority = 2147483647
timeout = 123
some_ready = 1
nfds = 4
allocated_nfds = <optimized out>
fds = 0x5646ab63b9f0
begin_time_nsec = 70582391357346
#24 g_main_context_iterate_unlocked (context=context@entry=0x5646a93a7250, block=block@entry=1, dispatch=dispatch@entry=1, self=<optimized out>) at ../glib/gmain.c:4349
max_priority = 2147483647
timeout = 123
some_ready = 1
nfds = 4
allocated_nfds = <optimized out>
fds = 0x5646ab63b9f0
begin_time_nsec = 70582391357346
#25 0x00007f58d9cb0513 in g_main_context_iteration (context=context@entry=0x5646a93a7250, may_block=may_block@entry=1) at ../glib/gmain.c:4414
retval = <optimized out>
#26 0x00007f58d9a51b1d in g_application_run (application=application@entry=0x5646a97018e0 [GimpApp], argc=argc@entry=0, argv=argv@entry=0x0) at ../gio/gapplication.c:2577
arguments = 0x5646a9831ee0
status = 0
context = 0x5646a93a7250
acquired_context = <optimized out>
__func__ = "g_application_run"
#27 0x00005646a848e7ab in app_run (full_prog_name=0x5646a938b9a0 "gimp-2.99", filenames=<optimized out>, alternate_system_gimprc=alternate_system_gimprc@entry=0x0, alternate_gimprc=alternate_gimprc@entry=0x0, session_name=<optimized out>, batch_interpreter=<optimized out>, batch_commands=0x0, quit=0, as_new=0, no_interface=0, no_data=<optimized out>, no_fonts=<optimized out>, no_splash=0, be_verbose=0, use_shm=1, use_cpu_accel=1, console_messages=0, use_debug_handler=0, show_playground=1, show_debug_menu=1, stack_trace_mode=GIMP_STACK_TRACE_QUERY, pdb_compat_mode=<optimized out>, backtrace_file=0x5646a936c720 "/home/jim/.var/app/org.gimp.GIMP/config/GIMP/2.99/CrashLog/gimp-crash-1703174784.txt") at ../app/app.c:317
gimp = 0x5646a9599480 [Gimp]
app = 0x5646a97018e0 [GimpApp]
default_folder = 0x0
gimpdir = 0x5646a9701ed0
abort_message = <optimized out>
retval = 0
__func__ = "app_run"
#28 0x00005646a82bfcd7 in main (argc=<optimized out>, argv=<optimized out>) at ../app/main.c:796
context = 0x5646a938cb60
error = 0x0
abort_message = <optimized out>
basename = <optimized out>
system_gimprc_file = 0x0
user_gimprc_file = 0x0
gimp_group = <optimized out>
backtrace_file = 0x5646a936c720 "/home/jim/.var/app/org.gimp.GIMP/config/GIMP/2.99/CrashLog/gimp-crash-1703174784.txt"
retval = <optimized out>
i = <optimized out>
[Inferior 1 (process 2) detached]
Pressing the restart Gimp button closes the crash dialo but does not do a restart. This was after following the debug instructions. Gimp is a flatpak 2.99.16 installed for user, commit d3c5536a
Edited by Michael Schumacher