gdk: fix crash on Wayland with already destroyed surface.

See crash reliably reproduced on GIMP when a popup is destroyed on a
drag-begin callback and Wayland data listener callbacks calls the
enter() callback with a NULL surface.

Cf. https://gitlab.gnome.org/GNOME/gimp/-/issues/10515